@@ -64,11 +64,13 @@ public class QueryHistoricTimeseriesExportXlsxResponseTest {
 
 		final byte[] result;
 
-		try (var os = new ByteArrayOutputStream()) {
-			var workbook = new Workbook(os, "Historic data", null);
+		try (//
+				var os = new ByteArrayOutputStream();
+				var workbook = new Workbook(os, "Historic data", null) //
+		) {
 			var ws = workbook.newWorksheet("Export");
 
-			Locale currentLocale = new Locale("en", "EN");
+			Locale currentLocale = Locale.of("en", "EN");
 
 			var translationBundle = ResourceBundle.getBundle("io.openems.common.jsonrpc.response.translation",
 					currentLocale);
