@@ -1,5 +1,7 @@
 package io.openems.edge.core.appmanager.dependency;
 
+import static java.util.stream.Collectors.joining;
+
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -8,7 +10,7 @@ import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.NoSuchElementException;
+import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.ResourceBundle;
@@ -19,6 +21,7 @@ import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.BiFunction;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import org.osgi.service.component.annotations.Activate;
 import org.osgi.service.component.annotations.Component;
@@ -26,10 +29,13 @@ import org.osgi.service.component.annotations.Reference;
 import org.osgi.service.component.annotations.ReferenceCardinality;
 import org.osgi.service.component.annotations.ReferencePolicy;
 import org.osgi.service.component.annotations.ReferencePolicyOption;
+import org.osgi.service.component.annotations.ServiceScope;
+import org.osgi.service.condition.Condition;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import com.google.common.collect.Lists;
+import com.google.common.collect.Sets;
 import com.google.gson.JsonObject;
 
 import io.openems.common.exceptions.OpenemsError.OpenemsNamedException;
@@ -47,50 +53,84 @@ import io.openems.edge.core.appmanager.AppManagerUtil;
 import io.openems.edge.core.appmanager.ComponentUtil;
 import io.openems.edge.core.appmanager.ComponentUtilImpl;
 import io.openems.edge.core.appmanager.ConfigurationTarget;
-import io.openems.edge.core.appmanager.InterfaceConfiguration;
 import io.openems.edge.core.appmanager.OpenemsApp;
 import io.openems.edge.core.appmanager.OpenemsAppInstance;
 import io.openems.edge.core.appmanager.TranslationUtil;
 import io.openems.edge.core.appmanager.dependency.DependencyDeclaration.AppDependencyConfig;
-import io.openems.edge.core.appmanager.validator.Validator;
+import io.openems.edge.core.appmanager.dependency.aggregatetask.AggregateTask;
+import io.openems.edge.core.appmanager.dependency.aggregatetask.ComponentAggregateTask;
+import io.openems.edge.core.appmanager.dependency.aggregatetask.PersistencePredictorAggregateTask;
+import io.openems.edge.core.appmanager.dependency.aggregatetask.SchedulerAggregateTask;
+import io.openems.edge.core.appmanager.dependency.aggregatetask.SchedulerByCentralOrderAggregateTask;
+import io.openems.edge.core.appmanager.dependency.aggregatetask.StaticIpAggregateTask;
 
-@Component
+@Component(//
+		immediate = true, //
+		scope = ServiceScope.SINGLETON //
+)
 public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 
 	private final Logger log = LoggerFactory.getLogger(this.getClass());
 
-	@Reference(policy = ReferencePolicy.DYNAMIC, policyOption = ReferencePolicyOption.GREEDY, cardinality = ReferenceCardinality.OPTIONAL)
+	@Component(service = { StartTarget.class })
+	public static class StartTarget implements Condition {
+		@Reference
+		private ComponentAggregateTask componentAggregateTask;
+		@Reference
+		private PersistencePredictorAggregateTask persistencePredictorAggregateTask;
+		@Reference
+		private SchedulerAggregateTask schedulerAggregateTask;
+		@Reference
+		private SchedulerByCentralOrderAggregateTask schedulerByCentralOrderAggregateTask;
+		@Reference
+		private StaticIpAggregateTask staticIpAggregateTask;
+	}
+
+	@Reference
+	private StartTarget startCondition;
+
+	@Reference(//
+			policy = ReferencePolicy.DYNAMIC, //
+			policyOption = ReferencePolicyOption.GREEDY, //
+			cardinality = ReferenceCardinality.OPTIONAL //
+	)
 	private volatile AppManager appManager;
 
-	@Reference(policy = ReferencePolicy.DYNAMIC, policyOption = ReferencePolicyOption.GREEDY, cardinality = ReferenceCardinality.OPTIONAL)
+	@Reference(//
+			policy = ReferencePolicy.DYNAMIC, //
+			policyOption = ReferencePolicyOption.GREEDY, //
+			cardinality = ReferenceCardinality.OPTIONAL //
+	)
 	private volatile AppManagerUtil appManagerUtil;
 
 	private final ComponentManager componentManager;
 	private final ComponentUtil componentUtil;
 
-	private final Validator validator;
-
-	// tasks
-	private final AggregateTask.ComponentAggregateTask componentsTask;
-	private final AggregateTask.SchedulerAggregateTask schedulerTask;
-	private final AggregateTask.StaticIpAggregateTask staticIpTask;
-
-	private final AggregateTask[] tasks;
+	private final List<AggregateTask<?>> tasks = new ArrayList<>();
 
 	private TemporaryApps temporaryApps;
 
 	@Activate
-	public AppManagerAppHelperImpl(@Reference ComponentManager componentManager, @Reference ComponentUtil componentUtil,
-			@Reference Validator validator, @Reference AggregateTask.ComponentAggregateTask componentsTask,
-			@Reference AggregateTask.SchedulerAggregateTask schedulerTask,
-			@Reference AggregateTask.StaticIpAggregateTask staticIpTask) {
+	public AppManagerAppHelperImpl(//
+			@Reference ComponentManager componentManager, //
+			@Reference ComponentUtil componentUtil //
+	) {
 		this.componentManager = componentManager;
 		this.componentUtil = componentUtil;
-		this.validator = validator;
-		this.componentsTask = componentsTask;
-		this.schedulerTask = schedulerTask;
-		this.staticIpTask = staticIpTask;
-		this.tasks = new AggregateTask[] { componentsTask, schedulerTask, staticIpTask };
+	}
+
+	@Reference(//
+			cardinality = ReferenceCardinality.MULTIPLE, //
+			policy = ReferencePolicy.DYNAMIC, //
+			policyOption = ReferencePolicyOption.GREEDY //
+	)
+	private void bindAggregateTask(AggregateTask<?> task) {
+		insert(this.tasks, task);
+	}
+
+	@SuppressWarnings("unused")
+	private void unbindAggregateTask(AggregateTask<?> task) {
+		this.tasks.remove(task);
 	}
 
 	@Override
@@ -110,8 +150,50 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 		return this.usingTemporaryApps(user, () -> this.deleteAppInternal(user, instance));
 	}
 
+	@Override
+	public List<AggregateTask.AggregateTaskExecutionConfiguration> getInstallConfiguration(//
+			User user, //
+			OpenemsAppInstance instance, //
+			OpenemsApp app //
+	) throws OpenemsNamedException {
+		return this.getConfigurations(user, () -> this.updateAppInternal(user, null, instance, app));
+	}
+
+	private List<AggregateTask.AggregateTaskExecutionConfiguration> getConfigurations(//
+			User user, //
+			ThrowingSupplier<UpdateValues, OpenemsNamedException> supplier //
+	) throws OpenemsNamedException {
+		Objects.requireNonNull(supplier);
+		// to make sure the temporaryApps get set to null
+		this.resetTasks();
+		this.temporaryApps = new TemporaryApps();
+		OpenemsNamedException exception = null;
+		RuntimeException runtimeException = null;
+		try {
+			supplier.get();
+		} catch (OpenemsNamedException e) {
+			exception = e;
+		} catch (RuntimeException e) {
+			runtimeException = e;
+		}
+		this.temporaryApps = null;
+		if (exception != null) {
+			this.log.error("An Exception occurred during handling the supplier.", exception);
+			throw exception;
+		}
+		if (runtimeException != null) {
+			this.log.error("An RuntimeException occurred during handling the supplier.", runtimeException);
+			throw runtimeException;
+		}
+
+		return this.tasks.stream() //
+				.map(AggregateTask::getExecutionConfiguration) //
+				.toList();
+	}
+
 	private UpdateValues usingTemporaryApps(User user, ThrowingSupplier<UpdateValues, OpenemsNamedException> supplier)
 			throws OpenemsNamedException {
+		Objects.requireNonNull(supplier);
 		// to make sure the temporaryApps get set to null
 		this.resetTasks();
 		this.temporaryApps = new TemporaryApps();
@@ -128,9 +210,11 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 		final var tempTemporarayApps = this.temporaryApps;
 		this.temporaryApps = null;
 		if (exception != null) {
+			this.log.error("An Exception occurred during handling the supplier.", exception);
 			throw exception;
 		}
 		if (runtimeException != null) {
+			this.log.error("An RuntimeException occurred during handling the supplier.", runtimeException);
 			throw runtimeException;
 		}
 
@@ -144,31 +228,16 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 
 		var errors = new LinkedList<String>();
 		final var language = user == null ? null : user.getLanguage();
-		final var bundle = getTranslationBundle(language);
 
-		try {
-			// create or delete unused components
-			this.componentsTask.create(user, otherAppConfigs);
-		} catch (OpenemsNamedException e) {
-			this.log.error(e.getMessage());
-			e.printStackTrace();
-			errors.add(TranslationUtil.getTranslation(bundle, "canNotUpdateComponents"));
-		}
-
-		try {
-			// update scheduler execute order
-			this.schedulerTask.create(user, otherAppConfigs);
-		} catch (OpenemsNamedException e) {
-			this.log.error(e.getMessage());
-			errors.add(TranslationUtil.getTranslation(bundle, "canNotUpdateScheduler"));
-		}
-
-		try {
-			// update static ips
-			this.staticIpTask.create(user, otherAppConfigs);
-		} catch (OpenemsNamedException e) {
-			this.log.error(e.getMessage());
-			errors.add(TranslationUtil.getTranslation(bundle, "canNotUpdateStaticIps"));
+		// execute all tasks
+		for (var task : this.tasks) {
+			try {
+				task.create(user, otherAppConfigs);
+			} catch (OpenemsNamedException e) {
+				final var errorMessage = task.getGeneralFailMessage(language);
+				this.log.error(errorMessage, e);
+				errors.add(errorMessage);
+			}
 		}
 
 		if (!errors.isEmpty()) {
@@ -180,13 +249,12 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 
 	private UpdateValues updateAppInternal(final User user, OpenemsAppInstance oldInstance,
 			OpenemsAppInstance newInstance, final OpenemsApp app) throws OpenemsNamedException {
-		final var warnings = new LinkedList<String>();
 		final var language = user == null ? null : user.getLanguage();
+
+		final var warnings = new LinkedList<String>();
 		final var bundle = getTranslationBundle(language);
 		final var toCreateInstances = new ArrayList<OpenemsAppInstance>();
 		if (oldInstance == null) {
-			// TODO maybe check for all apps and its dependencies
-			this.checkStatus(app, language);
 			this.temporaryApps.currentlyCreatingApps().add(newInstance);
 			toCreateInstances.add(newInstance);
 		} else {
@@ -194,7 +262,7 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 			var references = this.getAppsWithReferenceTo(oldInstance.instanceId);
 			references.removeAll(this.temporaryApps.currentlyDeletingApps());
 			for (var entry : this.getAppManagerImpl().appConfigs(references, null)) {
-				for (var dependencieDeclaration : entry.getValue().dependencies) {
+				for (var dependencieDeclaration : entry.getValue().dependencies()) {
 
 					var dd = entry.getKey().dependencies.stream()
 							.filter(d -> d.instanceId.equals(oldInstance.instanceId))
@@ -204,7 +272,7 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 						continue;
 					}
 
-					var dependencyApp = this.appManagerUtil.getInstanceById(dd.get().instanceId);
+					var dependencyApp = this.appManagerUtil.findInstanceById(dd.get().instanceId).orElse(null);
 
 					var appConfig = this.getAppDependencyConfig(dependencyApp, dependencieDeclaration.appConfigs);
 
@@ -244,120 +312,24 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 		}
 
 		var errors = new LinkedList<String>();
-
-		var oldInstances = new TreeMap<AppIdKey, ExistingDependencyConfig>();
 		// the DependencyConfig of the parent app, the instance of the DependencyConfig
 		var dependencieInstances = new HashMap<DependencyConfig, OpenemsAppInstance>();
-		// get all existing app dependencies
-		if (oldInstance != null) {
-			this.foreachExistingDependency(oldInstance, ConfigurationTarget.UPDATE, language, null, dc -> {
-				if (!dc.isDependency()) {
-					return true;
-				}
-				oldInstances.put(new AppIdKey(dc.parentInstance, dc.parentInstance.appId, dc.sub.key), dc);
-				return true;
-			});
-		}
 
-		BiFunction<OpenemsApp, DependencyDeclaration, IncludeApp> includeDependency = (a, d) -> {
+		var oldInstances = this.getOldDependencies(oldInstance, language);
 
-			var oldAppConfig = oldInstances.get(new AppIdKey(a.getAppId(), d.key));
-
-			var possibleInstance = this.findNeededApp(d, this.determineDependencyConfig(d.appConfigs));
-
-			if (oldAppConfig == null //
-					&& (d.createPolicy == DependencyDeclaration.CreatePolicy.ALWAYS //
-							|| (d.createPolicy == DependencyDeclaration.CreatePolicy.IF_NOT_EXISTING
-									&& possibleInstance.isEmpty()))) {
-				var config = this.determineDependencyConfig(d.appConfigs);
-				String appId;
-				UUID id = null;
-				List<Dependency> dependencies = null;
-				if (config.appId != null) {
-					appId = config.appId;
-					id = UUID.randomUUID();
-				} else {
-					var instance = this.appManagerUtil.getInstanceById(config.specificInstanceId);
-					appId = instance.appId;
-					id = instance.instanceId;
-					dependencies = instance.dependencies;
-				}
-				try {
-					// check if an instance can be created
-					this.appManagerUtil.getAppConfiguration(ConfigurationTarget.ADD, config.appId, config.alias,
-							config.initialProperties, language);
-					var instance = new OpenemsAppInstance(appId, config.alias, id, config.initialProperties,
-							dependencies);
-					this.temporaryApps.currentlyCreatingApps().add(instance);
-					toCreateInstances.add(instance);
-					return IncludeApp.INCLUDE_WITH_DEPENDENCIES;
-				} catch (NoSuchElementException | OpenemsNamedException ex) {
-					// app not found or config cant be get
-					return IncludeApp.NOT_INCLUDED;
-				}
-			}
-			// do not include apps twice
-			if (possibleInstance != null && possibleInstance.isPresent()) {
-				if (this.temporaryApps.currentlyCreatingApps().stream()
-						.anyMatch(t -> t.equals(possibleInstance.get()))) {
-					return IncludeApp.NOT_INCLUDED;
-				}
-			}
-
-			// remove dependencies which got not included because the app already exists
-			oldInstances.entrySet().stream() //
-					.filter(t -> Objects.equals(t.getKey().parent, oldAppConfig.instance)) //
-					.map(t -> t.getKey()) //
-					.collect(Collectors.toList()) //
-					.forEach(t -> oldInstances.remove(t));
-
-			// do not include the dependencies if the app already exists
-			return IncludeApp.INCLUDE_ONLY_APP;
-		};
 		final var lastCreatedOrModifiedApp = new AtomicReference<OpenemsAppInstance>();
 		// update app and its dependencies
-		this.foreachDependency(errors, app, newInstance.alias, newInstance.properties, ConfigurationTarget.UPDATE,
-				language, this::determineDependencyConfig, includeDependency, dc -> {
-					// get old instance if existing
-					ExistingDependencyConfig oldAppConfig = null;
-					if (oldInstance != null) {
-						// TODO make sure not the parent is a dependency
-						if (dc.isDependency() && oldInstance.appId.equals(app.getAppId())) {
-							oldAppConfig = oldInstances.remove(new AppIdKey(dc.parent.getAppId(), dc.sub.key));
-							if (oldAppConfig != null) {
-								for (var entry : oldAppConfig.appDependencyConfig.properties.entrySet()) {
-									// add old values which are not set by the DependencyDeclaration
-									if (!dc.appDependencyConfig.properties.has(entry.getKey())) {
-										dc.appDependencyConfig.properties.add(entry.getKey(), entry.getValue());
-									}
-								}
-							}
-						} else {
-							AppConfiguration oldAppConfiguration = null;
-							try {
-								oldAppConfiguration = this.appManagerUtil
-										.getAppConfiguration(ConfigurationTarget.UPDATE, dc.app, oldInstance, language);
-
-							} catch (OpenemsNamedException e) {
-								this.log.error(e.getMessage());
-								errors.add(TranslationUtil.getTranslation(bundle, "canNotGetAppConfiguration"));
-							}
-
-							var appDependencyConfig = DependencyDeclaration.AppDependencyConfig.create() //
-									.setAppId(app.getAppId()) //
-									.setAlias(oldInstance.alias) //
-									.setProperties(oldInstance.properties) //
-									.build();
-							oldAppConfig = new ExistingDependencyConfig(app, null, null, oldAppConfiguration,
-									appDependencyConfig, null, null, oldInstance);
-						}
-					}
-
+		this.foreachDependency(errors, app, newInstance.alias, newInstance.properties, //
+				ConfigurationTarget.UPDATE, language, //
+				this::determineDependencyConfig, //
+				this.includeDependency(oldInstances, toCreateInstances, language), //
+				oldInstance, oldInstances, //
+				(dc, oldAppConfig) -> {
 					// map dependencies if this is the parent
 					List<Dependency> dependencies = new ArrayList<>(dependencieInstances.size());
 					var removeKeys = new LinkedList<DependencyConfig>();
 					for (var dependency : dependencieInstances.entrySet()) {
-						if (!dc.config.dependencies.stream().anyMatch(t -> t.equals(dependency.getKey().sub))) {
+						if (!dc.config.dependencies().stream().anyMatch(t -> t.equals(dependency.getKey().sub))) {
 							continue;
 						}
 						removeKeys.add(dependency.getKey());
@@ -400,7 +372,7 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 									}
 
 								} catch (OpenemsNamedException e) {
-									this.log.error(e.getMessage());
+									this.log.error(e.getMessage(), e);
 									errors.add(TranslationUtil.getTranslation(bundle, "canNotGetAppConfiguration"));
 								}
 								propertiesOfNewInstance = dc.appDependencyConfig.properties;
@@ -468,10 +440,11 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 								for (var list : Lists.newArrayList(this.temporaryApps.currentlyCreatingApps(),
 										this.temporaryApps.currentlyModifiedApps())) {
 									modifiedOrCreatedApps = list;
-									replaceApp = modifiedOrCreatedApps.stream() //
+									var foundReplaceApp = modifiedOrCreatedApps.stream() //
 											.filter(i -> i.equals(instance)) //
 											.findAny().orElse(null);
-									if (replaceApp != null) {
+									if (foundReplaceApp != null) {
+										replaceApp = foundReplaceApp;
 										break;
 									}
 								}
@@ -487,8 +460,9 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 							}
 						}
 
-						var newAppInstance = new OpenemsAppInstance(dc.app.getAppId(), aliasOfNewInstance, instanceId,
-								propertiesOfNewInstance, dependencies);
+						final var newAppInstance = new OpenemsAppInstance(dc.app.getAppId(), aliasOfNewInstance,
+								instanceId, propertiesOfNewInstance, dependencies);
+
 						lastCreatedOrModifiedApp.set(newAppInstance);
 						this.temporaryApps.currentlyModifiedApps().removeIf(t -> t.equals(newAppInstance));
 						this.temporaryApps.currentlyCreatingApps().removeIf(t -> t.equals(newAppInstance));
@@ -511,14 +485,15 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 							}
 
 							var newConfig = this.getNewAppConfigWithReplacedIds(dc.app, oldInstanceOfCurrentApp,
-									newAppInstance, AppManagerAppHelperImpl.getComponentsFromConfigs(otherAppConfigs),
+									newAppInstance, AppConfiguration.getComponentsFromConfigs(otherAppConfigs),
 									language);
-							this.removeNotAllowedToSavedProperties(newAppInstance);
 
 							this.aggregateAllTasks(newConfig, oldConfig);
 						} catch (OpenemsNamedException e) {
-							this.log.error(e.getMessage());
+							this.log.error(e.getMessage(), e);
 							errors.add(TranslationUtil.getTranslation(bundle, "canNotGetAppConfiguration"));
+						} finally {
+							this.removeNotAllowedToSavedProperties(newAppInstance);
 						}
 						return true;
 					}
@@ -567,9 +542,18 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 					if (isNotAllowedToUpdate) {
 						newAppInstance = oldAppConfig.instance;
 					} else {
-						var newInstanceProperties = oldAppConfig.instance.properties.deepCopy();
-						for (var entry : dc.appDependencyConfig.properties.entrySet()) {
-							newInstanceProperties.add(entry.getKey(), entry.getValue());
+						var newInstanceProperties = dc.appDependencyConfig.properties;
+						// only add old configuration properties to updated app when it got updated by a
+						// parent app. This ensures that a property can be modified by the user on a
+						// child app and also not overwrite it when updating the parent app
+						// TODO child app may have inconsistent properties
+						if (dc.isDependency()) {
+							for (var entry : oldAppConfig.instance.properties.entrySet()) {
+								if (newInstanceProperties.has(entry.getKey())) {
+									continue;
+								}
+								newInstanceProperties.add(entry.getKey(), entry.getValue());
+							}
 						}
 						newAppInstance = new OpenemsAppInstance(dc.app.getAppId(), newInstanceAlias,
 								oldAppConfig.instance.instanceId, newInstanceProperties, dependencies);
@@ -597,16 +581,14 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 						}
 
 						var newAppConfig = this.getNewAppConfigWithReplacedIds(dc.app, oldAppConfig.instance,
-								newAppInstance, AppManagerAppHelperImpl.getComponentsFromConfigs(otherAppConfigs),
-								language);
-
-						this.removeNotAllowedToSavedProperties(newAppInstance);
+								newAppInstance, AppConfiguration.getComponentsFromConfigs(otherAppConfigs), language);
 
 						this.aggregateAllTasks(newAppConfig, oldAppConfig.config);
-
 					} catch (OpenemsNamedException e) {
-						this.log.error(e.getMessage());
+						this.log.error(e.getMessage(), e);
 						errors.add(TranslationUtil.getTranslation(bundle, "canNotGetAppConfiguration"));
+					} finally {
+						this.removeNotAllowedToSavedProperties(newAppInstance);
 					}
 
 					return true;
@@ -633,19 +615,138 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 				this.temporaryApps.currentlyDeletingApps(), warnings);
 	}
 
+	private Map<AppIdKey, ExistingDependencyConfig> getOldDependencies(//
+			final OpenemsAppInstance oldInstance, //
+			final Language language //
+	) throws OpenemsNamedException {
+		if (oldInstance == null) {
+			return Collections.emptyMap();
+		}
+		try {
+			final var oldInstances = new TreeMap<AppIdKey, ExistingDependencyConfig>();
+			// get all existing app dependencies
+			this.foreachExistingDependency(oldInstance, ConfigurationTarget.UPDATE, language, null, dc -> {
+				if (!dc.isDependency()) {
+					return true;
+				}
+				oldInstances.put(new AppIdKey(dc.parentInstance, dc.parentInstance.appId, dc.sub.key), dc);
+				return true;
+			});
+			return oldInstances;
+		} catch (OpenemsNamedException e) {
+			return Collections.emptyMap();
+		}
+	}
+
+	private BiFunction<OpenemsApp, DependencyDeclaration, IncludeApp> includeDependency(//
+			final Map<AppIdKey, ExistingDependencyConfig> oldInstances, //
+			final List<OpenemsAppInstance> toCreateInstances, //
+			final Language language //
+	) {
+		return (a, d) -> {
+
+			var oldAppConfig = oldInstances.get(new AppIdKey(a.getAppId(), d.key));
+
+			if (oldAppConfig != null) {
+				final var appIdOfExistingInstance = oldAppConfig.instance.appId;
+				if (!d.appConfigs.stream() //
+						.anyMatch(c -> Objects.equals(c.appId, appIdOfExistingInstance))) {
+
+					// remove dependencies which got not included because the app already exists
+					removeAppsWithParent(oldInstances, oldAppConfig.instance);
+
+					// if the current dependency is of a factory which is not anymore in the
+					// available configurations then removed and added with a unique appIdKey with
+					// the factory id for removing it at the end
+					oldInstances.remove(new AppIdKey(a.getAppId(), d.key));
+					oldInstances.put(new AppIdKey(a.getAppId(), d.key, oldAppConfig.instance.appId), oldAppConfig);
+					oldAppConfig = null;
+
+					// TODO maybe be able to reference this instance if it should be created in
+					// another dependency
+				}
+			}
+
+			var possibleInstance = this.findNeededApp(d, this.determineDependencyConfig(d.appConfigs));
+
+			if (oldAppConfig == null //
+					&& (d.createPolicy == DependencyDeclaration.CreatePolicy.ALWAYS //
+							|| (d.createPolicy == DependencyDeclaration.CreatePolicy.IF_NOT_EXISTING
+									&& possibleInstance.isEmpty()))) {
+				try {
+					var config = this.determineDependencyConfig(d.appConfigs);
+					String appId;
+					UUID id = null;
+					List<Dependency> dependencies = null;
+					if (config.appId != null) {
+						appId = config.appId;
+						id = UUID.randomUUID();
+					} else {
+						var instance = this.appManagerUtil.findInstanceById(config.specificInstanceId).orElse(null);
+						appId = instance.appId;
+						id = instance.instanceId;
+						dependencies = instance.dependencies;
+					}
+					// check if an instance can be created
+					this.appManagerUtil.getAppConfiguration(ConfigurationTarget.ADD, config.appId, config.alias,
+							config.initialProperties, language);
+					var instance = new OpenemsAppInstance(appId, config.alias, id, config.initialProperties,
+							dependencies);
+					this.temporaryApps.currentlyCreatingApps().add(instance);
+					toCreateInstances.add(instance);
+					return IncludeApp.INCLUDE_WITH_DEPENDENCIES;
+				} catch (OpenemsNamedException ex) {
+					// app not found or config cant be get
+					return IncludeApp.NOT_INCLUDED;
+				}
+			}
+			// do not include apps twice
+			if (possibleInstance != null && possibleInstance.isPresent()) {
+				if (this.temporaryApps.currentlyCreatingApps().stream()
+						.anyMatch(t -> t.equals(possibleInstance.get()))) {
+					return IncludeApp.NOT_INCLUDED;
+				}
+			}
+
+			if (oldAppConfig == null) {
+				return IncludeApp.INCLUDE_ONLY_APP;
+			}
+
+			// remove dependencies which got not included because the app already exists
+			removeAppsWithParent(oldInstances, oldAppConfig.instance);
+
+			// do not include the dependencies if the app already exists
+			return IncludeApp.INCLUDE_ONLY_APP;
+		};
+	}
+
+	private static void removeAppsWithParent(//
+			final Map<AppIdKey, ExistingDependencyConfig> instances, //
+			final OpenemsAppInstance parent //
+	) {
+		instances.entrySet().stream() //
+				.filter(t -> Objects.equals(t.getKey().parent, parent)) //
+				.map(t -> t.getKey()) //
+				.collect(Collectors.toList()) //
+				.forEach(t -> instances.remove(t));
+	}
+
 	/**
 	 * Removes properties which should not get saved e. g. passwords.
 	 * 
 	 * @param instance The {@link OpenemsAppInstance} to remove the properties from
 	 */
 	private void removeNotAllowedToSavedProperties(OpenemsAppInstance instance) {
-		// TODO needs to be changed if the properties have something similar to
-		// AttributeDefinition
 		try {
-			this.appManagerUtil.getAppConfiguration(ConfigurationTarget.DELETE_NOT_SAVED_PROPERTIES, instance,
-					Language.DEFAULT);
-		} catch (OpenemsNamedException e) {
-			e.printStackTrace();
+			final var app = this.appManagerUtil.findAppById(instance.appId).orElse(null);
+			if (app == null) {
+				return;
+			}
+			Arrays.stream(app.getProperties()) //
+					.filter(t -> !t.isAllowedToSave) //
+					.forEach(t -> instance.properties.remove(t.name));
+		} catch (UnsupportedOperationException e) {
+			// getting properties not supported
 		}
 	}
 
@@ -663,8 +764,8 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 	private final DependencyDeclaration getNeededDependencyTo(OpenemsAppInstance instance, String appId,
 			UUID instanceId) {
 		try {
-			var neededDependencies = this.appManagerUtil.getAppConfiguration(ConfigurationTarget.UPDATE, instance,
-					null).dependencies;
+			var neededDependencies = this.appManagerUtil.getAppConfiguration(ConfigurationTarget.UPDATE, instance, null)
+					.dependencies();
 			if (neededDependencies == null || neededDependencies.isEmpty()) {
 				return null;
 			}
@@ -697,24 +798,34 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 		public final String appId;
 		public final String key;
 
-		public AppIdKey(OpenemsAppInstance parent, String appId, String key) {
+		public final String actualAppId;
+
+		public AppIdKey(OpenemsAppInstance parent, String appId, String key, String actualAppId) {
 			this.parent = parent;
 			this.appId = appId;
 			this.key = key;
+			this.actualAppId = actualAppId;
+		}
 
+		public AppIdKey(OpenemsAppInstance parent, String appId, String key) {
+			this(parent, appId, key, null);
+		}
+
+		public AppIdKey(String appId, String key, String actualAppId) {
+			this(null, appId, key, actualAppId);
 		}
 
 		public AppIdKey(String appId, String key) {
-			this(null, appId, key);
+			this(null, appId, key, null);
 		}
 
 		@Override
 		public boolean equals(Object other) {
-			if (!(other instanceof AppIdKey)) {
+			if (!(other instanceof AppIdKey aik)) {
 				return false;
 			}
 
-			return ((AppIdKey) other).compareTo(this) == 0;
+			return aik.compareTo(this) == 0;
 		}
 
 		@Override
@@ -724,14 +835,22 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 
 		@Override
 		public String toString() {
-			return this.appId + ":" + this.key;
+			return this.appId + ":" + this.key //
+					+ (this.actualAppId != null ? ":" + this.actualAppId : "");
 		}
 	}
 
 	private UpdateValues deleteAppInternal(User user, OpenemsAppInstance instance) throws OpenemsNamedException {
-
 		final var language = user == null ? null : user.getLanguage();
 		final var bundle = getTranslationBundle(language);
+
+		final var app = this.appManagerUtil.findAppById(instance.appId).orElse(null);
+		if (app != null && user != null) {
+			final var permissions = app.getAppPermissions();
+			if (user.getRole().isLessThan(permissions.canDelete())) {
+				throw new OpenemsException("Access denied for User with Role '" + user.getRole().name() + "'");
+			}
+		}
 
 		BiFunction<OpenemsAppInstance, OpenemsAppInstance, Boolean> includeInstance = (p, i) -> {
 			if (p != null) {
@@ -745,7 +864,7 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 						return false;
 					}
 
-					var dependencyDeclaration = config.dependencies.stream()
+					var dependencyDeclaration = config.dependencies().stream()
 							.filter(dd -> dd.key.equals(dependency.get().key)).findFirst();
 
 					if (dependencyDeclaration.isEmpty()) {
@@ -768,7 +887,7 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 						break;
 					}
 
-				} catch (OpenemsNamedException | NoSuchElementException e) {
+				} catch (OpenemsNamedException e) {
 					// don't include instance if broken
 					return false;
 				}
@@ -873,16 +992,50 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 				.collect(Collectors.toList());
 	}
 
+	@SuppressWarnings("unchecked")
 	private final void aggregateAllTasks(AppConfiguration instance, AppConfiguration oldInstance) {
+		Function<AppConfiguration, List<Task<?>>> notExistingTask = config -> {
+			return Optional.ofNullable(config) //
+					.map(c -> c.tasks().stream() //
+							.filter(t -> Stream.of(this.tasks) //
+									.anyMatch(ot -> ot.getClass().isAssignableFrom(t.aggregateTaskClass()))) //
+							.collect(Collectors.toList()) //
+			).orElse(Lists.newArrayList());
+		};
+
+		var notAbleToExecuteTasks = notExistingTask.apply(instance);
+		notAbleToExecuteTasks.addAll(notExistingTask.apply(oldInstance));
+		if (!notAbleToExecuteTasks.isEmpty()) {
+			// TODO maybe throw exception and return
+			this.log.warn("Unable to find Task implementations for " + notAbleToExecuteTasks.stream() //
+					.map(t -> t.aggregateTaskClass().getSimpleName()) //
+					.collect(joining(", ")));
+		}
+
 		for (var task : this.tasks) {
-			task.aggregate(instance, oldInstance);
+			var newConfiguration = Optional.ofNullable(instance) //
+					.map(c -> c.getConfiguration(task.getClass())) //
+					.orElse(null);
+
+			var oldConfiguration = Optional.ofNullable(oldInstance) //
+					.map(c -> c.getConfiguration(task.getClass())) //
+					.orElse(null);
+
+			if (newConfiguration == null && oldConfiguration == null) {
+				continue;
+			}
+
+			this.aggregateTask(task, newConfiguration, oldConfiguration);
 		}
 	}
 
+	@SuppressWarnings("unchecked")
+	private <T> void aggregateTask(AggregateTask<T> aggregateTask, Object newConfig, Object oldConfig) {
+		aggregateTask.aggregate((T) newConfig, (T) oldConfig);
+	}
+
 	private void resetTasks() {
-		for (var task : this.tasks) {
-			task.reset();
-		}
+		this.tasks.forEach(AggregateTask::reset);
 	}
 
 	/**
@@ -902,7 +1055,7 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 				if (!dependency.instanceId.equals(instance.instanceId)) {
 					continue;
 				}
-				var declaration = entry.getValue().dependencies.stream().filter(dd -> dd.key.equals(dependency.key))
+				var declaration = entry.getValue().dependencies().stream().filter(dd -> dd.key.equals(dependency.key))
 						.findAny();
 
 				// declaration not found for dependency
@@ -921,52 +1074,15 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 		return true;
 	}
 
-	protected void checkStatus(OpenemsApp openemsApp, Language language) throws OpenemsNamedException {
-		var validatorConfig = openemsApp.getValidatorConfig();
-		var status = this.validator.getStatus(validatorConfig);
-		switch (status) {
-		case INCOMPATIBLE:
-			throw new OpenemsException("App is not compatible! " + this.validator
-					.getErrorCompatibleMessages(validatorConfig, language).stream().collect(Collectors.joining(";")));
-		case COMPATIBLE:
-			throw new OpenemsException("App can not be installed! " + this.validator
-					.getErrorInstallableMessages(validatorConfig, language).stream().collect(Collectors.joining(";")));
-		case INSTALLABLE:
-			// app can be installed
-			return;
-		}
-		throw new OpenemsException("Status '" + status.name() + "' is not implemented.");
-	}
-
-	protected static List<EdgeConfig.Component> getComponentsFromConfigs(List<AppConfiguration> configs) {
-		return mapAppConfiguration(configs, c -> c.components);
-	}
-
-	protected static List<String> getSchedulerIdsFromConfigs(List<AppConfiguration> configs) {
-		return mapAppConfiguration(configs, c -> c.schedulerExecutionOrder);
-	}
-
-	protected static List<InterfaceConfiguration> getStaticIpsFromConfigs(List<AppConfiguration> configs) {
-		return mapAppConfiguration(configs, c -> c.ips);
-	}
-
-	private static <T> List<T> mapAppConfiguration(List<AppConfiguration> configs,
-			Function<AppConfiguration, List<T>> mapper) {
-		return configs.stream() //
-				.map(mapper) //
-				.flatMap(l -> l.stream()) //
-				.collect(Collectors.toList());
-	}
-
 	/**
 	 * Finds the needed app for a {@link DependencyDeclaration}.
 	 *
 	 * @param declaration the current {@link DependencyConfig}
 	 * @param config      the current
 	 *                    {@link DependencyDeclaration.AppDependencyConfig}
-	 * @return s null if the app can not be added; {@link Optional#absent()} if the
-	 *         app needs to be created; the {@link OpenemsAppInstance} if an
-	 *         existing app can be used
+	 * @return null if the app can not be added; {@link Optional#empty()} if the app
+	 *         needs to be created; the {@link OpenemsAppInstance} if an existing
+	 *         app can be used
 	 */
 	private Optional<OpenemsAppInstance> findNeededApp(DependencyDeclaration declaration,
 			DependencyDeclaration.AppDependencyConfig config) {
@@ -979,11 +1095,10 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 		}
 		var appId = config.appId;
 		if (declaration.createPolicy == DependencyDeclaration.CreatePolicy.ALWAYS) {
-			var neededApps = this.getAllInstances().stream().filter(t -> t.appId.equals(appId))
-					.collect(Collectors.toList());
+			var neededApps = this.getAllInstances().stream().filter(t -> t.appId.equals(appId)).toList();
 			OpenemsAppInstance availableApp = null;
 			for (var neededApp : neededApps) {
-				if (this.getAppsWithDependencyTo(neededApp).isEmpty()) {
+				if (this.appManagerUtil.getAppsWithDependencyTo(neededApp).isEmpty()) {
 					availableApp = neededApp;
 					break;
 				}
@@ -998,13 +1113,6 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 			return Optional.empty();
 		}
 		return null;
-	}
-
-	private List<OpenemsAppInstance> getAppsWithDependencyTo(OpenemsAppInstance instance) {
-		return this.getAppManagerImpl().getInstantiatedApps().stream()
-				.filter(t -> t.dependencies != null && !t.dependencies.isEmpty())
-				.filter(t -> t.dependencies.stream().anyMatch(d -> d.instanceId.equals(instance.instanceId)))
-				.collect(Collectors.toList());
 	}
 
 	private static enum IncludeApp {
@@ -1040,25 +1148,76 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 	 * @param includeResult             the includeResult of the last iteration to
 	 *                                  know if only the app without its
 	 *                                  dependencies should be included
-	 * @return s the last {@link DependencyConfig}
+	 * @param oldMasterInstance         the previous {@link OpenemsAppInstance}
+	 *                                  which was updated by the user
+	 * @param oldInstances              all previous {@link OpenemsAppInstance
+	 *                                  OpenemsAppInstances}
+	 * @return the last {@link DependencyConfig}
 	 * @throws OpenemsNamedException on error
 	 */
-	private DependencyConfig foreachDependency(List<String> errors, OpenemsApp app, AppDependencyConfig appConfig,
-			ConfigurationTarget target, Function<DependencyConfig, Boolean> addConfig, DependencyDeclaration sub,
-			Language l, OpenemsApp parent, Set<UUID> alreadyIteratedInstances,
-			Function<List<AppDependencyConfig>, AppDependencyConfig> determineDependencyConfig,
-			BiFunction<OpenemsApp, DependencyDeclaration, IncludeApp> includeDependency, IncludeApp includeResult)
-			throws OpenemsNamedException {
+	private DependencyConfig foreachDependency(//
+			List<String> errors, //
+			OpenemsApp app, //
+			AppDependencyConfig appConfig, //
+			ConfigurationTarget target, //
+			BiFunction<DependencyConfig, ExistingDependencyConfig, Boolean> addConfig, //
+			DependencyDeclaration sub, //
+			Language l, //
+			OpenemsApp parent, //
+			Set<UUID> alreadyIteratedInstances, //
+			Function<List<AppDependencyConfig>, AppDependencyConfig> determineDependencyConfig, //
+			BiFunction<OpenemsApp, DependencyDeclaration, IncludeApp> includeDependency, //
+			IncludeApp includeResult, //
+			OpenemsAppInstance oldMasterInstance, //
+			Map<AppIdKey, ExistingDependencyConfig> oldInstances //
+	) throws OpenemsNamedException {
 		if (alreadyIteratedInstances == null) {
 			alreadyIteratedInstances = new HashSet<>();
 		}
 		AppConfiguration config = null;
+		var oldConfig = this.getOldAppConfig(//
+				new DependencyConfig(app, parent, sub, null, appConfig, null), //
+				app, oldMasterInstance, oldInstances, l //
+		);
+
 		try {
-			config = this.appManagerUtil.getAppConfiguration(target, app, appConfig.alias, appConfig.initialProperties,
-					l);
+			if (oldConfig == null) {
+				final var comps = this.getAppManagerImpl()
+						.getOtherAppConfigurations(alreadyIteratedInstances.stream().toArray(UUID[]::new)) //
+						.stream().flatMap(c -> c.getComponents().stream()).collect(Collectors.toList());
+				OpenemsAppInstance a = null;
+				if (sub != null && appConfig.specificInstanceId != null) {
+					a = this.getInstance(appConfig.specificInstanceId);
+				}
+				config = this.getNewAppConfigWithReplacedIds(app, a, //
+						new OpenemsAppInstance(app.getAppId(), appConfig.alias,
+								appConfig.specificInstanceId == null ? UUID.randomUUID() : appConfig.specificInstanceId,
+								appConfig.initialProperties, null), //
+						comps, l);
+			} else {
+				// add old properties
+				final var newProps = appConfig.initialProperties.deepCopy();
+				for (var prop : oldConfig.instance.properties.entrySet()) {
+					if (newProps.has(prop.getKey())) {
+						continue;
+					}
+					newProps.add(prop.getKey(), prop.getValue());
+				}
+				final var newInstanceId = appConfig.specificInstanceId == null ? oldConfig.instance.instanceId
+						: appConfig.specificInstanceId;
+
+				final var skipIds = Sets.newHashSet(alreadyIteratedInstances);
+				skipIds.add(newInstanceId);
+				final var comps = this.getAppManagerImpl()
+						.getOtherAppConfigurations(skipIds.stream().toArray(UUID[]::new)) //
+						.stream().flatMap(c -> c.getComponents().stream()).collect(Collectors.toList());
+				config = this.getNewAppConfigWithReplacedIds(app, oldConfig.instance, //
+						new OpenemsAppInstance(app.getAppId(), appConfig.alias, newInstanceId, newProps, null), //
+						comps, l);
+			}
 		} catch (OpenemsNamedException e) {
 			// can not get config of app
-			this.log.error(e.getMessage());
+			this.log.error(e.getMessage(), e);
 			errors.add(TranslationUtil.getTranslation(getTranslationBundle(l), "canNotGetAppConfigurationOfApp",
 					app.getName(l)));
 		}
@@ -1068,62 +1227,68 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 		var dependencies = new LinkedList<DependencyConfig>();
 		if (includeResult == IncludeApp.INCLUDE_WITH_DEPENDENCIES) {
 
-			for (var dependency : config.dependencies) {
+			for (var dependency : config.dependencies()) {
 				var nextAppConfig = determineDependencyConfig.apply(dependency.appConfigs);
 				if (nextAppConfig == null) {
 					// can not determine one out of many configs
 					continue;
 				}
-				try {
-					OpenemsApp dependencyApp;
-					if (nextAppConfig.appId != null) {
-						dependencyApp = this.appManagerUtil.getAppById(nextAppConfig.appId);
-					} else {
-						if (alreadyIteratedInstances.contains(nextAppConfig.specificInstanceId)) {
-							continue;
-						}
-						alreadyIteratedInstances.add(nextAppConfig.specificInstanceId);
-						var specificApp = this.getInstance(nextAppConfig.specificInstanceId);
-						dependencyApp = this.appManagerUtil.getAppById(specificApp.appId);
-						// fill up properties of existing app to make sure the appConfig can be get
-						specificApp.properties.entrySet().forEach(entry -> {
-							if (nextAppConfig.properties.has(entry.getKey())) {
-								return;
-							}
-							nextAppConfig.properties.add(entry.getKey(), entry.getValue());
-						});
-					}
-
-					var include = includeDependency.apply(app, dependency);
-					if (include == IncludeApp.NOT_INCLUDED) {
+				OpenemsApp dependencyApp;
+				if (nextAppConfig.appId != null) {
+					dependencyApp = this.appManagerUtil.findAppById(nextAppConfig.appId).orElse(null);
+				} else {
+					if (alreadyIteratedInstances.contains(nextAppConfig.specificInstanceId)) {
 						continue;
 					}
+					alreadyIteratedInstances.add(nextAppConfig.specificInstanceId);
+					var specificApp = this.getInstance(nextAppConfig.specificInstanceId);
+					dependencyApp = this.appManagerUtil.findAppById(specificApp.appId).orElse(null);
+					// fill up properties of existing app to make sure the appConfig can be get
+					specificApp.properties.entrySet().forEach(entry -> {
+						if (nextAppConfig.properties.has(entry.getKey())) {
+							return;
+						}
+						nextAppConfig.properties.add(entry.getKey(), entry.getValue());
+					});
+				}
+				if (dependencyApp == null) {
+					continue;
+				}
 
-					var addingConfig = this.foreachDependency(errors, dependencyApp, nextAppConfig, target, addConfig,
-							dependency, l, app, alreadyIteratedInstances, determineDependencyConfig, includeDependency,
-							include);
-					if (addingConfig != null) {
-						dependencies.add(addingConfig);
-					}
-				} catch (NoSuchElementException e) {
-					// can not find app
-					e.printStackTrace();
+				var include = includeDependency.apply(app, dependency);
+				if (include == IncludeApp.NOT_INCLUDED) {
+					continue;
+				}
+
+				var addingConfig = this.foreachDependency(errors, dependencyApp, nextAppConfig, target, addConfig,
+						dependency, l, app, alreadyIteratedInstances, determineDependencyConfig, includeDependency,
+						include, oldMasterInstance, oldInstances);
+				if (addingConfig != null) {
+					dependencies.add(addingConfig);
 				}
 			}
 
 		}
 		var newConfig = new DependencyConfig(app, parent, sub, config, appConfig, dependencies);
-		if (addConfig.apply(newConfig)) {
+		if (addConfig.apply(newConfig, oldConfig)) {
 			return newConfig;
 		}
 		return null;
 	}
 
-	private void foreachDependency(List<String> errors, OpenemsApp app, String alias, JsonObject defaultProperties,
-			ConfigurationTarget target, Language l,
-			Function<List<AppDependencyConfig>, AppDependencyConfig> determineDependencyConfig,
-			BiFunction<OpenemsApp, DependencyDeclaration, IncludeApp> includeDependency,
-			Function<DependencyConfig, Boolean> consumer) throws OpenemsNamedException {
+	private void foreachDependency(//
+			List<String> errors, //
+			OpenemsApp app, //
+			String alias, //
+			JsonObject defaultProperties, //
+			ConfigurationTarget target, //
+			Language l, //
+			Function<List<AppDependencyConfig>, AppDependencyConfig> determineDependencyConfig, //
+			BiFunction<OpenemsApp, DependencyDeclaration, IncludeApp> includeDependency, //
+			OpenemsAppInstance oldMasterInstance, //
+			Map<AppIdKey, ExistingDependencyConfig> oldInstances, //
+			BiFunction<DependencyConfig, ExistingDependencyConfig, Boolean> consumer //
+	) throws OpenemsNamedException {
 		var appConfig = DependencyDeclaration.AppDependencyConfig.create() //
 				.setAppId(app.getAppId()) //
 				.setAlias(alias) //
@@ -1131,7 +1296,54 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 				.build();
 
 		this.foreachDependency(errors, app, appConfig, target, consumer, null, l, null, null, determineDependencyConfig,
-				includeDependency, IncludeApp.INCLUDE_WITH_DEPENDENCIES);
+				includeDependency, IncludeApp.INCLUDE_WITH_DEPENDENCIES, oldMasterInstance, oldInstances);
+	}
+
+	private ExistingDependencyConfig getOldAppConfig(//
+			DependencyConfig dc, //
+			OpenemsApp app, //
+			OpenemsAppInstance oldMasterInstance, //
+			Map<AppIdKey, ExistingDependencyConfig> oldInstances, //
+			Language language //
+	) {
+		if (oldMasterInstance == null) {
+			return null;
+		}
+		ExistingDependencyConfig oldAppConfig = null;
+		if (dc.isDependency()) {
+			oldAppConfig = oldInstances.remove(new AppIdKey(dc.parent.getAppId(), dc.sub.key));
+
+			// if not found check if there is a old instance with the given app id
+			if (oldAppConfig == null) {
+				oldAppConfig = oldInstances.remove(new AppIdKey(dc.parent.getAppId(), dc.sub.key, dc.app.getAppId()));
+			}
+
+			if (oldAppConfig != null) {
+				for (var entry : oldAppConfig.appDependencyConfig.properties.entrySet()) {
+					// add old values which are not set by the DependencyDeclaration
+					if (!dc.appDependencyConfig.properties.has(entry.getKey())) {
+						dc.appDependencyConfig.properties.add(entry.getKey(), entry.getValue());
+					}
+				}
+			}
+		} else {
+			AppConfiguration oldAppConfiguration = null;
+			try {
+				oldAppConfiguration = this.appManagerUtil.getAppConfiguration(ConfigurationTarget.UPDATE, dc.app,
+						oldMasterInstance, language);
+
+			} catch (OpenemsNamedException e) {
+				this.log.error(e.getMessage());
+			}
+			var appDependencyConfig = DependencyDeclaration.AppDependencyConfig.create() //
+					.setAppId(app.getAppId()) //
+					.setAlias(oldMasterInstance.alias) //
+					.setProperties(oldMasterInstance.properties) //
+					.build();
+			oldAppConfig = new ExistingDependencyConfig(app, null, null, oldAppConfiguration, appDependencyConfig, null,
+					null, oldMasterInstance);
+		}
+		return oldAppConfig;
 	}
 
 	private OpenemsAppInstance getInstance(UUID id) {
@@ -1142,11 +1354,7 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 				return instance.get();
 			}
 		}
-		try {
-			return this.appManagerUtil.getInstanceById(id);
-		} catch (NoSuchElementException e) {
-			return null;
-		}
+		return this.appManagerUtil.findInstanceById(id).orElse(null);
 	}
 
 	/**
@@ -1176,7 +1384,7 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 			var instances = this.getAppManagerImpl().getInstantiatedApps().stream()
 					.filter(i -> i.appId.equals(config.appId)).collect(Collectors.toList());
 			for (var instance : instances) {
-				var existingDependencies = this.getAppsWithDependencyTo(instance);
+				var existingDependencies = this.appManagerUtil.getAppsWithDependencyTo(instance);
 				if (existingDependencies.isEmpty()) {
 					return config;
 				}
@@ -1207,7 +1415,7 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 	 * @param alreadyIteratedApps the already iterated app to avoid an endless loop
 	 * @param includeInstance     parent, instance, if the instance should get
 	 *                            included
-	 * @return s the last {@link DependencyConfig}
+	 * @return the last {@link DependencyConfig}
 	 * @throws OpenemsNamedException on error
 	 */
 	private DependencyConfig foreachExistingDependency(OpenemsAppInstance instance, ConfigurationTarget target,
@@ -1218,7 +1426,7 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 			alreadyIteratedApps = new HashSet<>();
 		}
 		alreadyIteratedApps.add(instance);
-		var app = this.appManagerUtil.getAppById(instance.appId);
+		var app = this.appManagerUtil.findAppById(instance.appId).orElse(null);
 		var config = this.appManagerUtil.getAppConfiguration(target, app, instance, l);
 
 		var dependecies = new ArrayList<DependencyConfig>();
@@ -1227,27 +1435,26 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 			if (instance.dependencies != null) {
 				dependecies = new ArrayList<>(instance.dependencies.size());
 				for (var dependency : instance.dependencies) {
-					try {
-						var dependencyApp = this.appManagerUtil.getInstanceById(dependency.instanceId);
-						if (alreadyIteratedApps.contains(dependencyApp)) {
-							continue;
-						}
-						var subApp = config.dependencies.stream().filter(t -> t.key.equals(dependency.key)).findFirst()
-								.get();
-						var dependencyConfig = this.foreachExistingDependency(dependencyApp, target, consumer, instance,
-								subApp, l, alreadyIteratedApps, includeInstance);
-						if (dependencyConfig != null) {
-							dependecies.add(dependencyConfig);
-						}
-					} catch (NoSuchElementException e) {
-						// can not find app
+					var dependencyApp = this.appManagerUtil.findInstanceById(dependency.instanceId).orElse(null);
+					if (dependencyApp == null) {
+						continue;
+					}
+					if (alreadyIteratedApps.contains(dependencyApp)) {
+						continue;
+					}
+					var subApp = config.dependencies().stream().filter(t -> t.key.equals(dependency.key)).findFirst()
+							.get();
+					var dependencyConfig = this.foreachExistingDependency(dependencyApp, target, consumer, instance,
+							subApp, l, alreadyIteratedApps, includeInstance);
+					if (dependencyConfig != null) {
+						dependecies.add(dependencyConfig);
 					}
 				}
 			}
 		}
 		OpenemsApp parentApp = null;
 		if (parent != null) {
-			parentApp = this.appManagerUtil.getAppById(parent.appId);
+			parentApp = this.appManagerUtil.findAppById(parent.appId).orElse(null);
 		}
 
 		DependencyDeclaration.AppDependencyConfig dependencyAppConfig;
@@ -1275,23 +1482,27 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 	 * @param app        the components of which app
 	 * @param properties the default properties to create an app instance of this
 	 *                   app
-	 * @return a map of the component id s that can be replaced mapped from id to
-	 *         key to put the next id
+	 * @return a list of {@link ReplacableIds}
 	 * @throws OpenemsNamedException on error
 	 */
-	protected final Map<String, String> getReplaceableComponentIds(OpenemsApp app, JsonObject properties)
+	private final List<ReplacableIds> getReplaceableComponentIds(OpenemsApp app, JsonObject properties)
 			throws OpenemsNamedException {
 		final var prefix = "?_?_";
 		var config = app.getAppConfiguration(ConfigurationTarget.TEST, properties, null);
 		var copy = properties.deepCopy();
 
+		Map<String, String> defaultIdToCurrentId = new HashMap<>();
 		// remove already set ids
-		for (var component : config.components) {
+		for (var component : config.getComponents()) {
 			String removeKey = null;
 			for (var entry : copy.entrySet()) {
 				var id = JsonUtils.getAsOptionalString(entry.getValue()).orElse(null);
 				if (id != null && component.getId().startsWith(id)) {
 					removeKey = entry.getKey();
+					final var myId = id;
+					final var defaultId = component.getId() //
+							.substring(component.getId().indexOf(':') + 1);
+					defaultIdToCurrentId.put(defaultId, myId);
 					break;
 				}
 			}
@@ -1302,12 +1513,12 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 
 		config = app.getAppConfiguration(ConfigurationTarget.TEST, copy, null);
 
-		for (var comp : config.components) {
+		for (var comp : config.getComponents()) {
 			copy.addProperty(comp.getId(), prefix);
 		}
 		var configWithNewIds = app.getAppConfiguration(ConfigurationTarget.TEST, copy, null);
 		Map<String, String> replaceableComponentIds = new HashMap<>();
-		for (var comp : configWithNewIds.components) {
+		for (var comp : configWithNewIds.getComponents()) {
 			if (comp.getId().startsWith(prefix)) {
 				// "METER_ID:meter0"
 				var raw = comp.getId().substring(prefix.length());
@@ -1317,10 +1528,27 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 				var property = pieces[0];
 				// "meter0"
 				var defaultId = pieces[1];
-				replaceableComponentIds.put(defaultId, property);
+				replaceableComponentIds.put(property, defaultId);
 			}
 		}
-		return replaceableComponentIds;
+
+		return replaceableComponentIds.entrySet().stream() //
+				.map(entry -> new ReplacableIds(defaultIdToCurrentId.get(entry.getValue()), //
+						entry.getValue(), entry.getKey())) //
+				.collect(Collectors.toList()); //
+	}
+
+	private final class ReplacableIds {
+		public final String predefinedId;
+		public final String defaultId;
+		public final String key;
+
+		public ReplacableIds(String predefinedId, String defaultId, String key) {
+			super();
+			this.predefinedId = predefinedId == null ? defaultId : predefinedId;
+			this.defaultId = defaultId;
+			this.key = key;
+		}
 	}
 
 	/**
@@ -1336,33 +1564,55 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 	 * @return the AppConfiguration with the replaced ID s of the components
 	 * @throws OpenemsNamedException on error
 	 */
-	private AppConfiguration getNewAppConfigWithReplacedIds(OpenemsApp app, OpenemsAppInstance oldAppInstance,
-			OpenemsAppInstance newAppInstance, List<EdgeConfig.Component> otherAppComponents, Language language)
-			throws OpenemsNamedException {
+	private AppConfiguration getNewAppConfigWithReplacedIds(//
+			OpenemsApp app, //
+			OpenemsAppInstance oldAppInstance, //
+			OpenemsAppInstance newAppInstance, //
+			List<EdgeConfig.Component> otherAppComponents, //
+			Language language //
+	) throws OpenemsNamedException {
 
-		var target = oldAppInstance == null ? ConfigurationTarget.ADD : ConfigurationTarget.UPDATE;
-
-		var newAppConfig = this.appManagerUtil.getAppConfiguration(target, app, newAppInstance, language);
+		final var target = oldAppInstance == null ? ConfigurationTarget.ADD : ConfigurationTarget.UPDATE;
 
 		final var replacableIds = this.getReplaceableComponentIds(app, newAppInstance.properties);
 
-		for (var comp : ComponentUtilImpl.order(newAppConfig.components)) {
-			// replace old id s with new ones
-			for (var entry : comp.getProperties().entrySet()) {
-				for (var replaceableId : replacableIds.entrySet()) {
-					if (entry.getValue().toString().contains(replaceableId.getKey())) {
-						var newId = entry.getValue().toString().replace(replaceableId.getKey(),
-								newAppInstance.properties.get(replaceableId.getValue()).getAsString());
-						newId = newId.replace("\"", "");
-						var newValue = JsonUtils.getAsJsonElement(newId);
-						comp.getProperties().put(entry.getKey(), newValue);
-					}
+		// set old ids from configuration
+		if (oldAppInstance != null) {
+			final var oldIds = this.getReplaceableComponentIds(app, oldAppInstance.properties);
+			for (var repId : oldIds) {
+				final var found = replacableIds.stream().filter(t -> t.key.equals(repId.key)).findAny().orElse(null);
+				if (found == null) {
+					continue;
 				}
+				replacableIds.remove(found);
+				replacableIds.add(repId);
 			}
+		}
+		final var propertiesCopy = newAppInstance.properties.deepCopy();
+
+		var indexToId = new HashMap<String, ReplacableIds>();
+		var index = 0;
+		for (var id : replacableIds) {
+			propertiesCopy.addProperty(id.key, String.valueOf(index));
+			indexToId.put(String.valueOf(index), id);
+			index++;
+		}
+
+		var newAppConfig = this.appManagerUtil.getAppConfiguration(target, app, newAppInstance.alias, propertiesCopy,
+				language);
+
+		final var orderedComponents = ComponentUtilImpl.order(newAppConfig.getComponents());
+		final var iterator = new ArrayList<>(orderedComponents).iterator();
+		for (int i = 0; iterator.hasNext(); i++) {
+			final var comp = iterator.next();
 
 			var isNewComponent = true;
-			var id = comp.getId();
-			var canBeReplaced = replacableIds.containsKey(id);
+			final var replacableId = indexToId.get(comp.getId());
+			final var canBeReplaced = replacableId != null;
+			final var originalId = canBeReplaced ? replacableId.predefinedId : comp.getId();
+			final var expliciteSet = canBeReplaced && oldAppInstance == null
+					&& newAppInstance.properties.get(replacableId.key) != null;
+			var id = originalId;
 			EdgeConfig.Component foundComponent = null;
 
 			// try to find a component with the necessary settings
@@ -1377,8 +1627,8 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 
 			// use component based on the last configuration
 			if (foundComponent == null && oldAppInstance != null && canBeReplaced
-					&& oldAppInstance.properties.has(replacableIds.get(id))) {
-				id = oldAppInstance.properties.get(replacableIds.get(id)).getAsString();
+					&& oldAppInstance.properties.has(replacableId.key)) {
+				id = oldAppInstance.properties.get(replacableId.key).getAsString();
 				foundComponent = this.componentManager.getEdgeConfig().getComponent(id).orElse(null);
 				final var tempId = id;
 				// other app uses the same component because they had the same configuration
@@ -1394,13 +1644,13 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 			if (isNewComponent) {
 				// if the id is not already set and there is no component with the default id
 				// then use the default id
-				foundComponent = this.componentManager.getEdgeConfig().getComponent(comp.getId()).orElse(null);
+				foundComponent = this.componentManager.getEdgeConfig().getComponent(originalId).orElse(null);
 				if (foundComponent == null) {
 					// find component for currently creating apps
 					for (var entry : this.getAppManagerImpl().appConfigs(
 							this.temporaryApps.currentlyCreatingModifiedApps(),
 							AppManagerImpl.excludingInstanceIds(newAppInstance.instanceId))) {
-						foundComponent = entry.getValue().components.stream()
+						foundComponent = entry.getValue().getComponents().stream()
 								.filter(t -> t.getId().equals(comp.getId())).findFirst().orElse(null);
 						if (foundComponent != null) {
 							break;
@@ -1408,10 +1658,38 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 
 					}
 				}
-				if (foundComponent == null) {
-					id = comp.getId();
+				var sameIdInComponents = orderedComponents.subList(0, i).stream() //
+						.map(c -> {
+							var repId = indexToId.get(c.getId());
+							return repId != null ? repId.defaultId : c.getId();
+						}) //
+						.anyMatch(t -> t.equals(originalId));
+
+				var usedInPreviousConfig = false;
+				final var alreadyUsedIds = new ArrayList<String>();
+				if (canBeReplaced && oldAppInstance != null) {
+					for (var entry : oldAppInstance.properties.entrySet()) {
+						if (entry.getKey().equals(replacableId.key)) {
+							continue;
+						}
+						var existingId = JsonUtils.getAsOptionalString(entry.getValue()).orElse(null);
+						if (existingId == null) {
+							continue;
+						}
+						alreadyUsedIds.add(existingId);
+						if (existingId.equals(originalId)) {
+							usedInPreviousConfig = true;
+						}
+					}
+				}
+
+				if (foundComponent == null && !sameIdInComponents && !usedInPreviousConfig) {
+					id = originalId;
+				} else if (foundComponent != null && expliciteSet) {
+					id = originalId;
 				} else {
 					// replace number at the end and get the next available id
+					id = canBeReplaced ? replacableId.defaultId : id;
 					var baseName = id.replaceAll("\\d+", "");
 					var startingNumberString = id.replace(baseName, "");
 					if (startingNumberString.isBlank()) {
@@ -1422,8 +1700,13 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 						}
 					} else {
 						var startingNumber = Integer.parseInt(startingNumberString);
-						var nextAvailableId = this.componentUtil.getNextAvailableId(baseName, startingNumber,
-								otherAppComponents);
+						var ids = new ArrayList<>(orderedComponents).stream() //
+								.map(EdgeConfig.Component::getId) //
+								.collect(Collectors.toList());
+						// add id if it was in the old configuration
+						ids.addAll(alreadyUsedIds);
+
+						var nextAvailableId = this.componentUtil.getNextAvailableId(baseName, startingNumber, ids);
 						if (!nextAvailableId.equals(id) && !canBeReplaced) {
 							// component can not be created because the id is already used
 							// and the id can not be set in the configuration
@@ -1437,7 +1720,13 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 			}
 
 			if (canBeReplaced) {
-				newAppInstance.properties.addProperty(replacableIds.get(comp.getId()), id);
+				// replace component with new id
+				final var component = orderedComponents.remove(i);
+				orderedComponents.add(i,
+						new EdgeConfig.Component(id, component.getAlias(), component.getFactoryId(),
+								component.getProperties().entrySet().stream()
+										.collect(JsonUtils.toJsonObject(Entry::getKey, Entry::getValue))));
+				newAppInstance.properties.addProperty(replacableId.key, id);
 			}
 		}
 		return this.appManagerUtil.getAppConfiguration(target, newAppInstance, language);
@@ -1451,7 +1740,13 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 		return (AppManagerImpl) appManagerImpl;
 	}
 
-	private static ResourceBundle getTranslationBundle(Language language) {
+	/**
+	 * Gets the {@link ResourceBundle} based on the given {@link Language}.
+	 * 
+	 * @param language the {@link Language} of the translations
+	 * @return the {@link ResourceBundle}
+	 */
+	public static ResourceBundle getTranslationBundle(Language language) {
 		if (language == null) {
 			language = Language.DEFAULT;
 		}
@@ -1476,6 +1771,31 @@ public class AppManagerAppHelperImpl implements AppManagerAppHelper {
 		return Optional.ofNullable(this.temporaryApps) //
 				.map(TemporaryApps::unmodifiableApps) //
 				.orElse(null);
+	}
+
+	/**
+	 * Inserts a task into a existing list of tasks. The task gets inserted at a
+	 * position which suits their
+	 * {@link AggregateTask.AggregateTaskExecuteConstraints}.
+	 * 
+	 * @param tasks the existing task list
+	 * @param task  the task to insert
+	 */
+	public static void insert(List<AggregateTask<?>> tasks, AggregateTask<?> task) {
+		// TODO detect circular constraints
+		var insertIndex = tasks.size();
+
+		final var iterator = tasks.listIterator();
+		while (iterator.hasNext()) {
+			final var i = iterator.nextIndex();
+			final var t = iterator.next();
+			if (t.getExecuteConstraints().runAfter().stream() //
+					.anyMatch(e -> e.isAssignableFrom(task.getClass()))) {
+				insertIndex = i;
+			}
+		}
+
+		tasks.add(insertIndex, task);
 	}
 
 }
